test/typecheck/bad-callref-empty.txt
;;; TOOL: wat2wasm
;;; ARGS: --enable-function-references
;;; ERROR: 1
(module
  (type (func))

  (func (export "main")
    (call_ref 0
    )
  )
)
(;; STDERR ;;;
out/test/typecheck/bad-callref-empty.txt:8:6: error: type mismatch in call_ref, expected [(ref null 0)] but got []
    (call_ref 0
     ^^^^^^^^
;;; STDERR ;;)
